k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expenses-frontend
  labels:
    app: expenses-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expenses-frontend
  template:
    metadata:
      labels:
        app: expenses-frontend
    spec:
      containers:
      - name: expenses-frontend
        image: krishna1908/expense-tracker-frontend:latest
        ports:
        - containerPort: 5173
        volumeMounts:
        - name: frontend-data
          mountPath: /app/data
      volumes:
      - name: frontend-data
        persistentVolumeClaim:
          claimName: frontend-pvc
